--- a/main.css
+++ b/main.css
@@ -35,20 +35,53 @@ nav {
     justify-self: flex-start;
 }
 
-.speed, .place-holder {
+.speed{
     justify-self: flex-end;
     align-self: flex-end;
     font-size: 1rem;
     text-align: center;
     width: 100%;
+    font-style: italic;
+    font-size: 1.2rem;
+}
+
+.arrows-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.arrow {
+    background-color: rgb(0, 0, 0);
+    opacity: 75%;
+    width: 50px;
+    height: 20px;
+}
+
+
+.arrow div {
+    background-color: rgb(0, 255, 34);
+    width: 15px;
+    height: 25px;
+    display: absolute;
+}
+
+
+.left-arrow div:first-child, .right-arrow div:first-child {
+    transform: rotate(45deg);
+}
+
+.left-arrow div:last-child,  .right-arrow div:last-child{
+    transform: rotate(-45deg);
 }
 
 .score {
     justify-self: flex-end;
     align-self: flex-end;
-    font-size: 2rem;
+    font-size: 2.5rem;
     text-align: center;
     width: 10vw;
+    font-weight: bolder;
 }
 
 .start, .atomatic {
@@ -56,6 +89,15 @@ nav {
     background-color: black;
     color: white;
     text-align: center;
+    margin-top: auto;
+}
+
+.start:hover, .atomatic:hover {
+    background-color: rgb(59, 59, 59);
+}
+
+.pressed {
+    background-color: rgb(82, 82, 82);
 }
 
 .container {
