--- a/main.css
+++ b/main.css
@@ -54,25 +54,42 @@ nav {
 .arrow {
     background-color: rgb(0, 0, 0);
     opacity: 75%;
-    width: 50px;
-    height: 20px;
+    width: 15px;
+    height: 50px;
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
 }
 
+.arrow:hover, .arrow:hover div{
+    background-color: rgb(58, 58, 58);
+}
 
 .arrow div {
-    background-color: rgb(0, 255, 34);
-    width: 15px;
-    height: 25px;
-    display: absolute;
+    background-color: rgb(0, 0, 0);
+    width: 30px;
+    height: 10px;
+    position: absolute;
+    display: block;
 }
 
-
-.left-arrow div:first-child, .right-arrow div:first-child {
-    transform: rotate(45deg);
-}
-
-.left-arrow div:last-child,  .right-arrow div:last-child{
+.arrow div:first-child {
     transform: rotate(-45deg);
+    left: -14px;
+
+    
+}
+.arrow div:last-child {
+    transform: rotate(45deg);
+    left: 0px;
+}
+
+.left-arrow {
+    transform: rotate(-90deg);
+}
+
+.right-arrow {
+    transform: rotate(90deg);
 }
 
 .score {
