--- a/main.css
+++ b/main.css
@@ -63,6 +63,7 @@ nav {
 
 .arrow:hover, .arrow:hover div{
     background-color: rgb(58, 58, 58);
+    cursor: pointer;
 }
 
 .arrow div {
@@ -112,6 +113,7 @@ nav {
 
 .start:hover, .atomatic:hover {
     background-color: rgb(59, 59, 59);
+    cursor: pointer;
 }
 
 .pressed {
